--- a/package.json
+++ b/package.json
@@ -6,17 +6,33 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "gen": "graphql-codegen -r dotenv/config --config codegen.ts",
     "lint": "next lint"
   },
   "dependencies": {
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
+    "@caisy/rich-text-react-renderer": "^0.4.1",
     "@types/react-dom": "18.0.11",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "@fontsource/inter": "^4.5.15",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.2.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "@graphql-codegen/cli": "^3.2.1",
+    "@graphql-codegen/client-preset": "1.1.4",
+    "@graphql-codegen/introspection": "2.2.1",
+    "@graphql-codegen/typescript-generic-sdk": "^3.1.0",
+    "@graphql-codegen/typescript-graphql-request": "^4.5.8",
+    "tailwindcss": "^3.2.7"
   }
 }
