--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
   "dependencies": {
     "@caisy/rich-text-react-renderer": "^0.7.3",
     "@fontsource/inter": "^4.5.15",
-    "@types/node": "18.14.6",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "eslint": "8.35.0",
-    "eslint-config-next": "13.2.3",
     "graphql": "^16.6.0",
     "graphql-request": "^5.2.0",
     "next": "13.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "eslint": "8.35.0",
+    "eslint-config-next": "13.2.3",
+    "@types/node": "18.14.6",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "typescript": "4.9.5",
     "@graphql-codegen/cli": "^3.2.1",
     "@graphql-codegen/client-preset": "1.1.4",
     "@graphql-codegen/introspection": "2.2.1",
