--- a/package.json
+++ b/package.json
@@ -16,25 +16,25 @@
     "@fontsource/inter": "^4.5.15",
     "graphql": "^16.6.0",
     "graphql-request": "^5.1.0",
-    "next": "13.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "^13.4.12",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "eslint": "8.35.0",
-    "eslint-config-next": "13.2.3",
-    "@types/node": "18.14.6",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "typescript": "4.9.5",
     "@graphql-codegen/cli": "^3.2.1",
     "@graphql-codegen/client-preset": "1.1.4",
     "@graphql-codegen/introspection": "2.2.1",
     "@graphql-codegen/typescript-generic-sdk": "^3.1.0",
     "@graphql-codegen/typescript-graphql-request": "^4.5.8",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/node": "18.14.6",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
     "autoprefixer": "^10.4.13",
+    "eslint": "8.35.0",
+    "eslint-config-next": "^13.4.12",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "typescript": "4.9.5"
   }
 }
