--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@caisy/rich-text-react-renderer": "^0.7.3",
     "@fontsource/inter": "^4.5.15",
+    "encoding": "^0.1.13",
     "graphql": "^16.6.0",
     "graphql-request": "^5.1.0",
     "next": "^13.4.12",
